--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon index.js $IFACE 27015 27016",
+    "start": "forever start index.js $IFACE 27015 27016 && forever logs index.js -f; forever stopall"
   },
   "repository": {
     "type": "git",
